* Fixed TSC errors in a sinful way * Fix left aligned upload buttons.

--- a/src/app/components/SelectNode/UploadMacaroons.less
+++ b/src/app/components/SelectNode/UploadMacaroons.less
@@ -16,6 +16,13 @@
     padding: 0.6rem 0 0.4rem;
     margin-bottom: 1rem;
 
+    // Must target these specifically due to table shenanigans in firefox
+    .ant-upload-drag-icon,
+    .ant-upload-text,
+    .ant-upload-hint {
+      text-align: center;
+    }
+
     .ant-upload-btn {
       padding: 0;
     }
